feat: add storage management toggle, size filter toggle, ClockThread fix, SystemDirectoryFilter fix, and misc improvements
- Add STORAGE_ENABLED config to enable/disable storage management with UI checkbox
- Add FILE_FILTER_MAX_SIZE_ENABLED config with UI toggle in FilterConfigDialog
- Fix ClockThread wall-clock time tracking (deadline-based instead of iteration counting)
- Fix SystemDirectoryFilter not filtering during monitoring phase (scan + watch guard)
- Add SystemDirectoryFilter for FOUND.000, .Spotlight-V100, .fseventsd, $RECYCLE.BIN
- Various GUI, i18n, logging, and worker improvements

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>